# libserial

./: CMakeLists.txt  bufferedserial.cpp  bufferedtest.cpp  ringbufferbase.h  serial.cpp  serial.h  serialranges.h  serialsim.h  utf8conv.h
test/: CMakeLists.txt  bufferedtest.cpp  ringbuffertest.cpp
